--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#Global configuration
+spring.application.name=patient
 
+#Tomcat configuration
+server.port=8081
+
+#DATABASE
+spring.datasource.url=jdbc:mysql://localhost:3306/patient?serverTimezone=UTC
+spring.datasource.username=root
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
