--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/patient?serverTimezone=UTC
 spring.datasource.username=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#Log level configuration
+logging.level.root=ERROR
+logging.level.com.mediscreen.patient=INFO
+
+#Swagger Configuration
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
