--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.application.name=patient
 server.port=8081
 
 #DATABASE
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/patient?serverTimezone=UTC
 spring.datasource.username=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
